--- a/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
+++ b/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.skipClusterBroker }}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ClusterServiceBroker
 metadata:
@@ -8,3 +9,4 @@ metadata:
 {{ include "provision.labels" . | indent 4 }}
 spec:
   url: http://{{ .Values.global.osb.name }}.{{ .Values.global.osb.namespace }}:{{ .Values.global.osb.port }}
+{{- end }}
