fixes for atp provisioning

--- a/deploy/helm-chart/provision/templates/secrets-global.yaml
+++ b/deploy/helm-chart/provision/templates/secrets-global.yaml
@@ -1,7 +1,7 @@
-{{- $oadbAdminPw := .Values.global.oadbAdminPassword | default (randAlphaNum 12) }}
+{{- $oadbAdminPw := .Values.global.oadbAdminPassword | default (randAlphaNum 30) }}
 {{- $oadbWalletPw := .Values.global.oadbWalletPassword | default (randAlphaNum 12) }}
 {{- $oadbName := .Values.global.oadbName | default (printf "mushop%s" (randAlphaNum 12)) }}
-{{- $oadbUser := .Values.global.oadbUser | default (printf "user-%s" (randAlphaNum 12)) }}
+{{- $oadbUser := .Values.global.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
 {{- $oadbPw := .Values.global.oadbPassword | default (printf "%s" (randAlphaNum 12)) }}
 
 {{/* If we need to create a global ATP instance to be used by other services */}}
@@ -30,7 +30,7 @@ data:
   oadb_pw: {{ $oadbPw | b64enc }}
   oadb_db: {{ $dbName | b64enc }}
   oadb_db_osb: {{ printf `{"dbName":"%s"}` $dbName | b64enc }}
-  oadb_service: {{ printf "%s_tp" $oadbName | b64enc }}
+  oadb_service: {{ printf "%s_tp" $dbName | lower | b64enc }}
   oadb_wallet_pw: {{ $oadbWalletPw | b64enc }}
   oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $oadbWalletPw | b64enc }}
 {{- end }}
