--- a/deploy/helm-chart/provision/templates/secrets-services.yaml
+++ b/deploy/helm-chart/provision/templates/secrets-services.yaml
@@ -14,7 +14,7 @@ metadata:
 {{ include "provision.labels" . | indent 4 }}
 type: Opaque
 data:
-  {{- $pass := $svcKey.oadbAdminPassword | default (randAlphaNum 12) }}
+  {{- $pass := $svcKey.oadbAdminPassword | default (randAlphaNum 30) }}
   oadb_admin_pw: {{ $pass | b64enc }}
   oadb_admin_pw_osb: {{ printf `{"password":"%s"}` $pass | b64enc }}
 ---
@@ -27,14 +27,14 @@ metadata:
 type: Opaque
 data:
   {{- $name := $svcKey.oadbName | default (printf "mu%s%s" $svcName (randAlphaNum 12)) | trunc 14 }}
-  {{- $user := $svcKey.oadbUser | default (printf "user-%s" (randAlphaNum 12)) }}
+  {{- $user := $svcKey.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
   {{- $pass := $svcKey.oadbPassword | default (randAlphaNum 12) }}
   {{- $wpass := $svcKey.oadbWalletPassword | default (randAlphaNum 12) }}
   oadb_user: {{ $user | b64enc }}
   oadb_pw: {{ $pass | b64enc }}
   oadb_db: {{ $name | b64enc }}
   oadb_db_osb: {{ printf `{"dbName":"%s"}` $name | b64enc }}
-  oadb_service: {{ printf "%s_tp" $name | b64enc }}
+  oadb_service: {{ printf "%s_tp" $name | lower | b64enc }}
   oadb_wallet_pw: {{ $wpass | b64enc }}
   oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $wpass | b64enc }}
 ---
