User service compatable with OSB/manual

--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
@@ -1,8 +1,10 @@
+{{- if not .Values.osb.atp }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "user.fullname" . }}-admin
-  labels: {{ include "user.labels" . | nindent 4 }}
+  name: {{ .Chart.Name }}-oadb-admin
+  labels: {{ include (printf "%s.labels" .Chart.Name) . | nindent 4 }}
 type: Opaque
 data:
   oadb_admin_pw: {{ .Values.secrets.oadbAdminPassword | default "" | b64enc }}
+{{- end }}
