--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-connection-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-connection-secret.yaml
@@ -1,8 +1,10 @@
+{{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
+{{- if not $usesOsb }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "user.fullname" . }}-connection
-  labels: {{ include "user.labels" . | nindent 4 }}
+  name: {{ .Chart.Name }}-oadb-connection
+  labels: {{ include (printf "%s.labels" .Chart.Name ) . | nindent 4 }}
 type: Opaque
 data:
   {{- if eq .Values.global.mock.service "all" }}
@@ -14,3 +16,4 @@ data:
   oadb_user: {{ required "Value .secrets.oadbUser is required!" .Values.secrets.oadbUser | b64enc }}
   oadb_pw: {{ required "Value .secrets.oadbPassword is required!" .Values.secrets.oadbPassword | b64enc }}
   {{- end }}
+{{- end }}
