--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-init-configmap.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-init-configmap.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "user.fullname" . }}-init
-  labels: {{ include "user.labels" . | nindent 4 }}
+  name: {{ include (printf "%s.fullname" .Chart.Name) . }}-init
+  labels: {{ include (printf "%s.labels" .Chart.Name) . | nindent 4 }}
 data: {{- (.Files.Glob "config/*.sql").AsConfig | nindent 2 }}
-
