--- a/deploy/helm-chart/mushop/charts/orders/templates/oadb-connection-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/oadb-connection-secret.yaml
@@ -1,18 +1,21 @@
+{{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
+{{- if not $usesOsb }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "orders.fullname" . }}-connection
-  labels: {{ include "orders.labels" . | nindent 4 }}
+  name: {{ .Chart.Name }}-oadb-connection
+  labels: {{ include (printf "%s.labels" .Chart.Name ) . | nindent 4 }}
 type: Opaque
 data:
   {{- if eq .Values.global.mock.service "all" }}
-  oadb_wallet_pw: {{ "mock" | b64enc }}
-  oadb_service: {{ "mock" | b64enc }}
-  oadb_user: {{ "mock" | b64enc }}
-  oadb_pw: {{ "mock" | b64enc }}
+  oadb_wallet_pw: {{ .Values.secrets.oadbWalletPassword | default "mock" | b64enc }}
+  oadb_service: {{ .Values.secrets.oadbService | default "mock" | b64enc }}
+  oadb_user: {{ .Values.secrets.oadbUser | default "mock" | b64enc }}
+  oadb_pw: {{ .Values.secrets.oadbPassword | default "mock" | b64enc }}
   {{- else }}
   oadb_wallet_pw: {{ required "Value .secrets.oadbWalletPassword is required!" .Values.secrets.oadbWalletPassword | b64enc }}
   oadb_service: {{ required "Value .secrets.oadbService is required!" .Values.secrets.oadbService | b64enc }}
   oadb_user: {{ required "Value .secrets.oadbUser is required!" .Values.secrets.oadbUser | b64enc }}
   oadb_pw: {{ required "Value .secrets.oadbPassword is required!" .Values.secrets.oadbPassword | b64enc }}
   {{- end }}
+{{- end }}
