converted skips to a map

--- a/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
+++ b/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.skipClusterBroker }}
+{{- if not .Values.skip.clusterBroker }}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ClusterServiceBroker
 metadata:
