--- a/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
+++ b/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
@@ -1,5 +1,5 @@
 # This secret is used by the service broker
-{{- if not .Values.skipOciCredentials }}
+{{- if not .Values.skip.ociCredentials }}
 apiVersion: v1
 kind: Secret
 metadata:
