concession: streaming secret skip

--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -1,7 +1,13 @@
+{{- if not .Values.skip.streaming -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-streams-secret
+  {{/*
+    OSS has very low service limits by default.
+    The secret is deliberately not prefixed so
+    that it may be provided separately altogether
+  */}}
+  name: streaming-secret
   labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
@@ -16,3 +22,4 @@ data:
   oci_api_key: |-
     {{ required (printf "API Key file %s is missing!" .Values.secrets.streams.keyFile) $keyFile | b64enc }}
   {{ end }}
+{{- end }}
