--- a/deploy/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
@@ -41,35 +41,35 @@ spec:
             - name: OCI_TENANT_ID
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_tenant_id
             - name: OCI_USER_ID
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_user_id
             - name: OCI_FINGERPRINT
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_fingerprint
             - name: OCI_PASS_PHRASE
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_pass_phrase
             - name: OCI_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_api_key
             - name: OCI_REGION
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_region
             - name: OCI_COMPARTMENT_ID
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-streams-secret
+                  name: streaming-secret
                   key: oci_compartment_id
