--- a/deploy/helm-chart/mushop/charts/orders/templates/oadb-connection-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/oadb-connection-secret.yaml
@@ -8,10 +8,10 @@ metadata:
 type: Opaque
 data:
   {{- if eq .Values.global.mock.service "all" }}
-  oadb_wallet_pw: {{ .Values.secrets.oadbWalletPassword | default "mock" | b64enc }}
-  oadb_service: {{ .Values.secrets.oadbService | default "mock" | b64enc }}
-  oadb_user: {{ .Values.secrets.oadbUser | default "mock" | b64enc }}
-  oadb_pw: {{ .Values.secrets.oadbPassword | default "mock" | b64enc }}
+  oadb_wallet_pw: {{ "mock" | b64enc }}
+  oadb_service: {{ "mock" | b64enc }}
+  oadb_user: {{ "mock" | b64enc }}
+  oadb_pw: {{ "mock" | b64enc }}
   {{- else }}
   oadb_wallet_pw: {{ required "Value .secrets.oadbWalletPassword is required!" .Values.secrets.oadbWalletPassword | b64enc }}
   oadb_service: {{ required "Value .secrets.oadbService is required!" .Values.secrets.oadbService | b64enc }}
