--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -8,16 +8,19 @@
   "license": "UPL-1.0",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "node optimize.js && node deploy.js"
+    "build": "npm run clean && node optimize.js",
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
+    "mime": "^2.4.4"
+  },
+  "devDependencies": {
     "imagemin": "^7.0.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "mime": "^2.4.4",
     "rimraf": "^3.0.0"
   }
 }
