--- a/deploy/kubernetes/manifests/catalogue-dep.yaml
+++ b/deploy/kubernetes/manifests/catalogue-dep.yaml
@@ -18,7 +18,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: catalogue
-          image: phx.ocir.io/intvravipati/mushop/catalogue:1.2
+          image: iad.ocir.io/oracle/ateam/mushop-catalogue:1.2
           imagePullPolicy: Always
           command: ["/app"]
           args:
