--- a/deploy/kubernetes/manifests/carts-dep.yaml
+++ b/deploy/kubernetes/manifests/carts-dep.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: carts
-        image: phx.ocir.io/intvravipati/mushop/carts:1.0.2
+        image: iad.ocir.io/oracle/ateam/mushop-carts:1.0.2
         ports:
          - containerPort: 80
         env:
