--- a/deploy/kubernetes/manifests/edge-dep.yaml
+++ b/deploy/kubernetes/manifests/edge-dep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: edge
-        image: phx.ocir.io/intvravipati/mushop/edge-router:1
+        image: iad.ocir.io/oracle/ateam/mushop-edge-router:1
         imagePullPolicy: Always
         ports:
         - name: http
