--- a/deploy/kubernetes/manifests/orders-dep.yaml
+++ b/deploy/kubernetes/manifests/orders-dep.yaml
@@ -13,7 +13,7 @@ spec:
     spec: 
       containers:
       - name: orders
-        image: phx.ocir.io/intvravipati/mushop/orders:1.0.3
+        image: iad.ocir.io/oracle/ateam/mushop-orders:1.0.3
         imagePullPolicy: Always
         env:
         - name: ZIPKIN
