--- a/deploy/kubernetes/manifests/storefront-dep.yaml
+++ b/deploy/kubernetes/manifests/storefront-dep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: storefront
-        image: phx.ocir.io/intvravipati/mushop/storefront:2.0
+        image: iad.ocir.io/oracle/ateam/mushop-storefront:2.0
         imagePullPolicy: Always
         ports:
         - name: http
