--- a/deploy/kubernetes/manifests/user-syncdb-job.yaml
+++ b/deploy/kubernetes/manifests/user-syncdb-job.yaml
@@ -10,7 +10,7 @@ spec:
       restartPolicy: Never
       containers:
       - name: user-syncdb
-        image: phx.ocir.io/intvravipati/mushop/user:1.0.0
+        image: iad.ocir.io/oracle/ateam/mushop-user:1.0.0
         imagePullPolicy: Always
         command: ["npm", "run", "schema:sync"]
         env:
