--- a/src/api/test/docker-compose.yml
+++ b/src/api/test/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   # OCI Catalog service
   catalogue:
-    image: phx.ocir.io/intvravipati/mushop/catalogue:1.1
+    image: iad.ocir.io/oracle/ateam/mushop-catalogue:1.1
     hostname: catalogue
     restart: always
     environment:
@@ -19,7 +19,7 @@ services:
       - OADB_SERVICE=mcatalogue_tp
 
   carts:
-    image: phx.ocir.io/intvravipati/mushop/carts:1.0.1
+    image: iad.ocir.io/oracle/ateam/mushop-carts:1.0.1
     hostname: carts
     restart: always
     environment:
@@ -32,7 +32,7 @@ services:
       - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   
   orders:
-    image: phx.ocir.io/intvravipati/mushop/orders:1.0.1
+    image: iad.ocir.io/oracle/ateam/mushop-orders:1.0.1
     hostname: orders
     restart: always
     environment:
@@ -45,7 +45,7 @@ services:
       - JAVA_OPTS=-Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
   shipping:
-    image: phx.ocir.io/intvravipati/mushop/shipping:1.0.0
+    image: iad.ocir.io/oracle/ateam/mushop-shipping:1.0.0
     hostname: payment
     restart: always
     environment:
@@ -58,7 +58,7 @@ services:
       - OCI_API_KEY
 
   stream:
-    image: phx.ocir.io/intvravipati/mushop/stream:1.0.0
+    image: iad.ocir.io/oracle/ateam/mushop-stream:1.0.0
     hostname: payment
     restart: always
     environment:
@@ -71,14 +71,14 @@ services:
       - OCI_API_KEY
 
   payment:
-    image: phx.ocir.io/intvravipati/mushop/payment:0.0.1
+    image: iad.ocir.io/oracle/ateam/mushop-payment:0.0.1
     hostname: payment
     restart: always
     environment:
       - reschedule:on-node-failure
 
   user:
-    image: phx.ocir.io/intvravipati/mushop/user:1.0.0
+    image: iad.ocir.io/oracle/ateam/mushop-user:1.0.0
     hostname: user
     restart: always
     environment:
