--- a/src/load/load-dep.yaml
+++ b/src/load/load-dep.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: load
-        image: phx.ocir.io/intvravipati/mushop/load:1
+        image: iad.ocir.io/oracle/ateam/mushop-load:1
         imagePullPolicy: Always
         args: ["-h", "edge", "-c", "5", "-r", "120"]
       nodeSelector:
