--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -35,13 +35,33 @@ server: kill-server
 		--network-alias $(CONTAINER) \
 		-v $$PWD:/usr/src/app   \
 		-P                      \
-		-e MOCK_MODE=all				\
-		-e NODE_ENV=development \
 		-e STATIC_MEDIA_URL=$(STATIC_MEDIA_URL) \
+		-e CATALOGUE_URL=http://catalogue \
+		-e CARTS_URL=http://carts \
+		-e ORDERS_URL=http://orders \
+		-e USERS_URL=http://user \
+		-e NODE_ENV=development \
 		-e PORT=3000            \
 		-p 8080:3000            \
 		-p 9229:9229            \
 		--network mutest_default  \
+		$(IMAGE) supper --inspect -i node_modules server.js
+
+# Runs the Node.js application in a Docker container
+mock: kill-server 
+	@docker run               \
+		-d                      \
+		--rm										\
+		--name $(CONTAINER)     \
+		--network-alias $(CONTAINER) \
+		-v $$PWD:/usr/src/app   \
+		-P                      \
+		-e STATIC_MEDIA_URL=$(STATIC_MEDIA_URL) \
+		-e MOCK_MODE=all \
+		-e NODE_ENV=development \
+		-e PORT=3000            \
+		-p 8080:3000            \
+		-p 9229:9229            \
 		$(IMAGE) supper --inspect -i node_modules server.js
 
 # Removes the development container & image
@@ -63,4 +83,4 @@ test: image
 
 
 kill-server:
-	@if [ $$(docker ps -a -q -f name=$(CONTAINER) | wc -l) -ge 1 ]; then docker rm -f $(CONTAINER); fi
+	@if [ $$(docker ps -a -q -f name=$(CONTAINER) | wc -l) -ge 1 ]; then docker rm -f $$(docker ps -a -q -f name=$(CONTAINER)); fi
