--- a/src/carts/src/main/resources/application.properties
+++ b/src/carts/src/main/resources/application.properties
@@ -1,21 +1,6 @@
-server.port=${port:8081}
-spring.data.mongodb.uri=mongodb://${db:carts-db}:27017/data
-endpoints.health.enabled=false
-spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
-spring.zipkin.enabled=${zipkin_enabled:false}
-spring.sleuth.sampler.percentage=1.0
-spring.application.name=carts
-# Disable actuator metrics endpoints
-endpoints.metrics.enabled=false
-endpoints.prometheus.id=metrics
 
-management.endpoints.web.exposure.include=*
-management.endpoint.metrics.enabled=true
-management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+# The name of the JSON document collection to store the carts in. 
+OADB_CARTS_COLLECTION=cart
 
-
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql=true
+# The autonomous database service name (or "Mock" for in-memory without a database)
+OADB_SERVICE=Mock
