--- a/src/carts/src/main/resources/application.properties
+++ b/src/carts/src/main/resources/application.properties
@@ -3,4 +3,4 @@
 OADB_CARTS_COLLECTION=cart
 
 # The autonomous database service name (or "Mock" for in-memory without a database)
-OADB_SERVICE=Mock
+OADB_SERVICE=mock
