--- a/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
@@ -7,11 +7,15 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
+      app: {{ .Chart.Name }}
+      version: {{ .Values.image.tag }}
       app.kubernetes.io/name: {{ include "orders.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
+        app: {{ .Chart.Name }}
+        version: {{ .Values.image.tag }}
         app.kubernetes.io/name: {{ include "orders.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
