--- a/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
@@ -8,11 +8,15 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
+      app: {{ .Chart.Name }}
+      version: {{ .Values.image.tag }}
       app.kubernetes.io/name: {{ include "payment.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
+        app: {{ .Chart.Name }}
+        version: {{ .Values.image.tag }}
         app.kubernetes.io/name: {{ include "payment.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
