--- a/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
-  streamName:  {{ .Values.secrets.streams.streamName | default "" | b64enc }}
-  streamId: {{ .Values.secrets.streams.streamId | default "" | b64enc }}
+  streamName: {{ .Values.secrets.streams.streamName | default "" | b64enc | default ("" | quote) }}
+  streamId: {{ .Values.secrets.streams.streamId | default "" | b64enc | default ("" | quote) }}
