--- a/deploy/complete/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/streams-secret.yaml
@@ -18,7 +18,7 @@ data:
   oci_user_id: {{ required "Value .secrets.streams.userId is required!" .Values.secrets.streams.userId | b64enc }}
   oci_fingerprint: {{ required "Value .secrets.streams.fingerprint is required!" .Values.secrets.streams.fingerprint | b64enc }}
   oci_region: {{ required "Value .secrets.streams.region is required!" .Values.secrets.streams.region | b64enc }}
-  oci_pass_phrase: {{ .Values.secrets.streams.passphrase | default "" | b64enc }}
+  oci_pass_phrase: {{ .Values.secrets.streams.passphrase | default "" | b64enc | default ("" | quote) }}
   oci_api_key: |-
     {{ required (printf "API Key file %s is missing!" .Values.secrets.streams.keyFile) $keyFile | b64enc }}
   {{ end }}
