--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-admin-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-admin-secret.yaml
@@ -6,5 +6,5 @@ metadata:
   labels: {{ include (printf "%s.labels" .Chart.Name) . | nindent 4 }}
 type: Opaque
 data:
-  oadb_admin_pw: {{ .Values.secrets.oadbAdminPassword | default "" | b64enc }}
+  oadb_admin_pw: {{ .Values.secrets.oadbAdminPassword | default "" | b64enc | default ("" | quote) }}
 {{- end }}
