--- a/deploy/complete/helm-chart/provision/templates/ocicredentials-secret.yaml
+++ b/deploy/complete/helm-chart/provision/templates/ocicredentials-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: oci-service-broker
+  name: {{ .Values.global.osb.name }}
   annotations:
     "helm.sh/resource-policy": keep
   labels:
@@ -15,7 +15,7 @@ data:
   user: {{ required "Value .secrets.serviceBroker.userId is required!" .Values.secrets.serviceBroker.userId | b64enc }}
   fingerprint: {{ required "Value .secrets.serviceBroker.fingerprint is required!" .Values.secrets.serviceBroker.fingerprint | b64enc }}
   region: {{ required "Value .secrets.serviceBroker.region is required!" .Values.secrets.serviceBroker.region | b64enc }}
-  passphrase: {{ required "Value .secrets.serviceBroker.passphrase is required!" .Values.secrets.serviceBroker.passphrase | b64enc }}
+  passphrase: {{ .Values.secrets.serviceBroker.passphrase | default "" | b64enc | default ("" | quote) }}
   privatekey: |-
     {{ required (printf "API Key file %s is required!" .Values.secrets.serviceBroker.keyFile) $keyFile | b64enc }}
 {{- end }}
