--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
@@ -8,16 +8,17 @@ spec:
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
-      version: {{ .Values.image.tag }}
+      version: {{ .Values.image.tag | quote }}
       app.kubernetes.io/name: {{ include "catalogue.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: {{ .Chart.Name }}
-        version: {{ .Values.image.tag }}
+        version: {{ .Values.image.tag | quote }}
         app.kubernetes.io/name: {{ include "catalogue.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        mockmode: {{ .Values.global.mock.service | quote }}
     spec:
       terminationGracePeriodSeconds: 5
       initContainers:
