--- a/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
-      version: {{ .Values.image.tag }}
+      version: {{ .Values.image.tag | quote }}
       app.kubernetes.io/name: {{ include "shipping.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
       run: {{ include "shipping.name" . }}
@@ -17,7 +17,7 @@ spec:
     metadata:
       labels:
         app: {{ .Chart.Name }}
-        version: {{ .Values.image.tag }}
+        version: {{ .Values.image.tag | quote }}
         app.kubernetes.io/name: {{ include "shipping.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         run: {{ include "shipping.name" . }}
