--- a/deploy/complete/helm-chart/mushop/charts/user/templates/user-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/user/templates/user-deployment.yaml
@@ -8,16 +8,17 @@ spec:
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
-      version: {{ .Values.image.tag }}
+      version: {{ .Values.image.tag | quote }}
       app.kubernetes.io/name: {{ include "user.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: {{ .Chart.Name }}
-        version: {{ .Values.image.tag }}
+        version: {{ .Values.image.tag | quote }}
         app.kubernetes.io/name: {{ include "user.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        mockmode: {{ .Values.global.mock.service | quote }}
     spec:
       initContainers:
         {{- include "user.init.wallet" . | nindent 8 }}
