updated provisioning to separate connection from credentials

--- a/deploy/complete/helm-chart/provision/templates/secrets-services.yaml
+++ b/deploy/complete/helm-chart/provision/templates/secrets-services.yaml
@@ -4,6 +4,11 @@
 {{- $svcKey := index $.Values (printf "%s" $svcName) -}}
 {{- $svcOsbKey := index $.Values (printf "%s.osb" $svcName) -}}
 
+{{- $name := $svcKey.secrets.oadbName | default (printf "mu%s%s" $svcName (randAlphaNum 12)) | trunc 14 }}
+{{- $user := $svcKey.secrets.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
+{{- $pass := $svcKey.secrets.oadbPassword | default (randAlphaNum 12) }}
+{{- $wpass := $svcKey.secrets.oadbWalletPassword | default (randAlphaNum 12) }}
+
 {{/* Check if need to create ATP secrets for the particular service */}}
 {{ if $svcOsbKey.atp -}}
 apiVersion: v1
@@ -26,17 +31,21 @@ metadata:
 {{ include "provision.labels" . | indent 4 }}
 type: Opaque
 data:
-  {{- $name := $svcKey.oadbName | default (printf "mu%s%s" $svcName (randAlphaNum 12)) | trunc 14 }}
-  {{- $user := $svcKey.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
-  {{- $pass := $svcKey.oadbPassword | default (randAlphaNum 12) }}
-  {{- $wpass := $svcKey.oadbWalletPassword | default (randAlphaNum 12) }}
-  oadb_user: {{ $user | b64enc }}
-  oadb_pw: {{ $pass | b64enc }}
   oadb_db: {{ $name | b64enc }}
   oadb_db_osb: {{ printf `{"dbName":"%s"}` $name | b64enc }}
   oadb_service: {{ printf "%s_tp" $name | lower | b64enc }}
   oadb_wallet_pw: {{ $wpass | b64enc }}
   oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $wpass | b64enc }}
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ $svcName }}-oadb-credentials
+  labels:
+{{ include "provision.labels" . | indent 4 }}
+type: Opaque
+data:
+  oadb_user: {{ $user | b64enc }}
+  oadb_pw: {{ $pass | b64enc }}
 {{- end }}
 {{- end }}
