--- a/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
@@ -26,11 +26,21 @@ metadata:
 type: Opaque
 data:
 {{- $dbName := $oadbName | trunc 14 }}
-  oadb_user: {{ $oadbUser | b64enc }}
-  oadb_pw: {{ $oadbPw | b64enc }}
   oadb_db: {{ $dbName | b64enc }}
   oadb_db_osb: {{ printf `{"dbName":"%s"}` $dbName | b64enc }}
   oadb_service: {{ printf "%s_tp" $dbName | lower | b64enc }}
   oadb_wallet_pw: {{ $oadbWalletPw | b64enc }}
   oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $oadbWalletPw | b64enc }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ $.Values.global.osb.instanceName }}-oadb-credentials
+  labels:
+{{ include "provision.labels" . | indent 4 }}
+type: Opaque
+data:
+{{- $dbName := $oadbName | trunc 14 }}
+  oadb_user: {{ $oadbUser | b64enc }}
+  oadb_pw: {{ $oadbPw | b64enc }}
 {{- end }}
